--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body> 
+  <div>Hello World
+  
+  </div>
     <ul class="gallery">
         <li class="gallery-item">
             <a class="gallery-link" href="large-image.jpg">
